--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,10 @@
-<h1>Sample App</h1>
-<p>This is the home page</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>RailsTutorial | Home</title>
+  </head>
+  <body>
+    <h1>Sample App</h1>
+    <p>This is the home page</p>
+  </body>
+</html>
