--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,10 @@
-<h1>Help</h1>
-<p>This is the help page</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>RailsTutorial | Help</title>
+  </head>
+  <body>
+    <h1>Help</h1>
+    <p>This is the help page</p>
+  </body>
+</html>
