--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>RailsTutorial | About</title>
-  </head>
-  <body>
-    <h1>About Us</h1>
-    <p>This is the about page</p>
-  </body>
-</html>
+<% provide(:title, 'About') %>
+<h1>About Us</h1>
+<p>This is the about page</p>
